# app/Http/Controllers/ApiController.php
@@ -6,41 +6,5 @@ use Illuminate\Http\Request;
 
 class ApiController extends Controller
 {
-    /**
-     * @OA\Get(
-     *      path="/v1/countries",
-     *      operationId="getAllCountrie",
-     *      tags={"Tests"},
-
-     *      summary="Get List Of Countries",
-     *      description="Returns all countries and associated provinces. The country_slug variable is used for country specific data",
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *          @OA\MediaType(
-     *           mediaType="application/json",
-     *      )
-     *      ),
-     *      @OA\Response(
-     *          response=401,
-     *          description="Unauthenticated",
-     *      ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      ),
-     * @OA\Response(
-     *      response=400,
-     *      description="Bad Request"
-     *   ),
-     * @OA\Response(
-     *      response=404,
-     *      description="not found"
-     *   ),
-     *  )
-     */
-    public function getAllCountries()
-    {
-        serviceApi('countries');
-    }
+    
 }
